--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ plugins {
     id 'java'
 }
 
-group 'org.example'
+group 'com.jpa.study'
 version '1.0-SNAPSHOT'
 
 repositories {
@@ -12,6 +12,9 @@ repositories {
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
+
+    implementation 'org.hibernate:hibernate-entitymanager:4.3.10.Final'
+    implementation 'com.h2database:h2:1.4.199'
 }
 
 test {
