--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id "com.ewerk.gradle.plugins.querydsl" version "1.0.10"
 }
 
 group 'com.jpa.study'
@@ -10,13 +11,40 @@ repositories {
 }
 
 dependencies {
+    def querydlsVersion = '3.6.3'
+
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
 
     implementation 'org.hibernate:hibernate-entitymanager:4.3.10.Final'
     implementation 'com.h2database:h2:1.4.199'
+    implementation "com.mysema.querydsl:querydsl-jpa:$querydlsVersion"
+    compileOnly "com.mysema.querydsl:querydsl-apt:$querydlsVersion"
+
+    implementation "javax.annotation:javax.annotation-api:1.3.2"
+    annotationProcessor "javax.annotation:javax.annotation-api:1.3.2"
 }
 
 test {
     useJUnitPlatform()
+}
+
+//querydsl 추가 시작
+def querydslDir = "$buildDir/generated/querydsl"
+
+querydsl {
+    jpa = true
+    querydslSourcesDir = querydslDir
+}
+
+sourceSets {
+    main.java.srcDir querydslDir
+}
+
+configurations {
+    querydsl.extendsFrom compileClasspath
+}
+
+compileQuerydsl {
+    options.annotationProcessorPath = configurations.querydsl
 }
